//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Author {
  id Int [pk, increment]
  firstName String [not null]
  lastName String [not null]
  email String [unique, not null]
  bio String
  posts Post [not null]
  pictureUrl String
  socialLinks Json
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Series {
  id Int [pk, increment]
  title String [unique, not null]
  description String
  slug String [unique, not null]
  posts Post [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  isActive Boolean [not null, default: true]
}

Table Post {
  id Int [pk, increment]
  authors Author [not null]
  title String [unique, not null]
  abstract String [not null]
  content String [not null]
  images Image [not null]
  publishedAt DateTime [default: `now()`]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  tags Tag[] [not null]
  seriesId Int
  series Series
  isDraft Boolean [not null, default: true]
  slug String [unique, not null]
}

Table Image {
  id Int [pk, increment]
  filename String [not null]
  data Bytes [not null]
  mimeType String [not null]
  size Int [not null]
  alt String
  caption String
  postId Int [not null]
  post Post [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (postId, filename) [unique]
  }
}

Table AuthorToPost {
  postsId Int [ref: > Post.id]
  authorsId Int [ref: > Author.id]
}

Enum Tag {
  AWS
  GIS
  IAC
  NEST
  POSTGRES
  PRISMA
  PYTHON
  REACT
  TERRAFORM
  TEST
  TYPEORM
  TYPESCRIPT
}

Ref: Post.seriesId > Series.id

Ref: Image.postId > Post.id [delete: Cascade]